--- a/BIgSchool/BIgSchool.csproj
+++ b/BIgSchool/BIgSchool.csproj
@@ -186,6 +186,10 @@
     <Compile Include="Migrations\202203190355321_PopulateCategoryTable.Designer.cs">
       <DependentUpon>202203190355321_PopulateCategoryTable.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202203262042332_AddNameColumnToApplicationUser.cs" />
+    <Compile Include="Migrations\202203262042332_AddNameColumnToApplicationUser.Designer.cs">
+      <DependentUpon>202203262042332_AddNameColumnToApplicationUser.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Category.cs" />
@@ -196,6 +200,7 @@
     <Compile Include="Startup.cs" />
     <Compile Include="ViewModels\CourseViewModel.cs" />
     <Compile Include="ViewModels\FutureDate.cs" />
+    <Compile Include="ViewModels\ValidTime.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap-theme.css" />
@@ -280,6 +285,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202203190355321_PopulateCategoryTable.resx">
       <DependentUpon>202203190355321_PopulateCategoryTable.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202203262042332_AddNameColumnToApplicationUser.resx">
+      <DependentUpon>202203262042332_AddNameColumnToApplicationUser.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
